--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^6.2.1",
     "@privy-io/server-auth": "^1.18.1",
     "@solana/spl-token": "^0.4.9",
+    "@solana/web3.js": "^1.98.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
     "ai": "^4.1.0",
